microserv-maintenance/src/main/java/org/example/microservmaintenance/error/exception/NotFoundException.java
package org.example.microservmaintenance.error.exception;

public class NotFoundException extends RuntimeException{
    public NotFoundException(String message) {
        super(message);
    }
}
